Changement de Chosen a Selectize

--- a/STM.GDA.Web/Views/Composant/Creer.cshtml
+++ b/STM.GDA.Web/Views/Composant/Creer.cshtml
@@ -1,5 +1,6 @@
 ﻿@section Styles {
     <link href="@Url.Content("~/Content/ComposantCreer.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/Selectize.css")" rel="stylesheet" type="text/css" />
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
@@ -139,21 +140,26 @@
 
 <script>
     $(document).ready(function () {
-        $("#ClientsSelectionnes").chosen({
-            placeholder_text_multiple: "Sélectionnez un ou plusieurs clients",
-            no_results_text: "Aucun résultat. Appuyez sur Entré ou Tab pour ajouter l'option",
-            search_contains: true
+        $("#ClientsSelectionnes").selectize({
+            create: true,
+            persist: false,
+            placeholder: "Sélectionnez un ou plusieurs clients",
+            render: {
+                option_create: function (data, escape) {
+                    return '<div class="create">Ajouter <strong>' + escape(data.input) + '</strong>&hellip;</div>';
+                }
+            }
         });
-
-        $("#ResponsablesSelectionnes").chosen({
-            placeholder_text_multiple: "Sélectionnez un ou plusieurs responsables",
-            no_results_text: "Aucun résultat. Appuyez sur Entré ou Tab pour ajouter l'option",
-            search_contains: true
+        $("#ResponsablesSelectionnes").selectize({
+            create: true,
+            persist: false,
+            placeholder: "Sélectionnez un ou plusieurs responsables",
+            render: {
+                option_create: function (data, escape) {
+                    return '<div class="create">Ajouter <strong>' + escape(data.input) + '</strong>&hellip;</div>';
+                }
+            }
         });
-
-        //Append the custom value add function declared in script.js
-        chosenMultiselectCustomAdd("ClientsSelectionnes");
-        chosenMultiselectCustomAdd("ResponsablesSelectionnes");
     });
 
     $("#btnCreer").click(function () {
