--- a/STM.GDA.Web/Views/Shared/_Layout.cshtml
+++ b/STM.GDA.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     @RenderSection("scripts", required: false)
     @RenderSection("Styles", false)
     <script src="~/Scripts/script.js?v1.6"></script>
+    <script src="~/Scripts/selectize.js"></script>
 </head>
 <body>
     <div class="navbar navbar-fixed-top">
