Ajout du remove button dans les selectizes.

--- a/STM.GDA.Web/Views/Composant/Creer.cshtml
+++ b/STM.GDA.Web/Views/Composant/Creer.cshtml
@@ -140,6 +140,7 @@
 <script>
     $(document).ready(function () {
         $("#ClientsSelectionnes").selectize({
+            plugins: ['remove_button'],
             create: true,
             persist: false,
             placeholder: "Sélectionnez un ou plusieurs clients",
@@ -150,6 +151,7 @@
             }
         });
         $("#ResponsablesSelectionnes").selectize({
+            plugins: ['remove_button'],
             create: true,
             persist: false,
             placeholder: "Sélectionnez un ou plusieurs responsables",
