Retrait du plugin

--- a/STM.GDA.Web/Views/Composant/_ModifierTechnologies.cshtml
+++ b/STM.GDA.Web/Views/Composant/_ModifierTechnologies.cshtml
@@ -7,7 +7,7 @@
 <script>
     $(document).ready(function () {
         $('#TechnologiesSelectionnes').selectize({
-            plugins: ['remove_button', 'drag_drop'],
+            plugins: ['remove_button'],
             create: true,
             persist: false,
             placeholder: "Ajouter des technologies",
