--- a/STM.GDA.Web/Views/Composant/_ModifierTechnologies.cshtml
+++ b/STM.GDA.Web/Views/Composant/_ModifierTechnologies.cshtml
@@ -2,7 +2,11 @@
 @model List<EtiquetteModel>
 
 <h3>Technologies</h3>
-@Html.ListBox("TechnologiesSelectionnees", new MultiSelectList((IEnumerable<SelectListItem>)ViewBag.ListeTechnologies, "Value", "Text", Model.Select(x => x.Id)), new { @class = "margin-bottom", style = "width: 100%;" })
+<div class="row">
+    <div class="full-height col-sm-9 col-sm-push-3">
+        @Html.ListBox("TechnologiesSelectionnees", new MultiSelectList((IEnumerable<SelectListItem>)ViewBag.ListeTechnologies, "Value", "Text", Model.Select(x => x.Id)), new { @class = "margin-bottom", style = "width: 100%;" })
+    </div>
+</div>
 
 <script>
     $(document).ready(function () {
