--- a/STM.GDA.Web/Views/Composant/Details.cshtml
+++ b/STM.GDA.Web/Views/Composant/Details.cshtml
@@ -59,7 +59,10 @@
                 @Html.DisplayNameFor(m => m.ResonsablesText)
             </div>
             <div class="col-xs-12 col-sm-9 col-md-8">
-                @Html.DisplayFor(m => m.ResonsablesText)
+                @foreach (var responsable in Model.Responsables)
+                {
+                <span class="tag">@Html.DisplayFor(m => responsable.Nom)</span>
+                }
             </div>
         </div>
 
@@ -68,7 +71,10 @@
                 @Html.DisplayNameFor(m => m.ClientsText)
             </div>
             <div class="col-xs-12 col-sm-9 col-md-8">
-                @Html.DisplayFor(m => m.ClientsText)
+                @foreach (var client in Model.Clients)
+                {
+                <span class="tag">@Html.DisplayFor(m => client.Nom)</span>
+                }
             </div>
         </div>
 
