--- a/STM.GDA.Web/Views/Composant/Details.cshtml
+++ b/STM.GDA.Web/Views/Composant/Details.cshtml
@@ -10,10 +10,10 @@
 				<div class="modal-dialog">
 					<div class="modal-content">
 						<div class="modal-header">
-							Supprimer
+							Confirmation de suppression
 						</div>
 						<div class="modal-body">
-							Êtes vous sûre de vouloir supprimer cette application?
+							Êtes-vous certain de vouloir supprimer ce composant?
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
