removed unused model properties

--- a/STM.GDA.Web/Views/Composant/Details.cshtml
+++ b/STM.GDA.Web/Views/Composant/Details.cshtml
@@ -72,7 +72,7 @@
 
 			<div class="value row">
 				<div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
-					@Html.DisplayNameFor(m => m.ResonsablesText)
+					@Html.DisplayNameFor(m => m.Responsables)
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-8">
 					@foreach (var responsable in Model.Responsables)
@@ -84,7 +84,7 @@
 
 			<div class="value row">
 				<div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
-					@Html.DisplayNameFor(m => m.ClientsText)
+					@Html.DisplayNameFor(m => m.Clients)
 				</div>
 				<div class="col-xs-12 col-sm-9 col-md-8">
 					@foreach (var client in Model.Clients)
