Debut de la page d'affichage des deploiements

--- a/STM.GDA.Web/Views/Shared/_Layout.cshtml
+++ b/STM.GDA.Web/Views/Shared/_Layout.cshtml
@@ -31,6 +31,8 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Applications et services", "Index", "Composant")</li>
+                <li>@Html.ActionLink("Déploiements", "Index" ,"Deploiement")</li>
+
             </ul>
         </div>
     </div>
