--- a/STM.GDA.Web/Views/Deploiement/Details.cshtml
+++ b/STM.GDA.Web/Views/Deploiement/Details.cshtml
@@ -46,10 +46,10 @@
 
         <div class="value row">
             <div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
-                @Html.DisplayNameFor(m => m.NomComposant)
+                @Html.DisplayNameFor(m => m.Composant)
             </div>
             <div class="col-xs-12 col-sm-9 col-md-8">
-                @Html.DisplayFor(m => m.NomComposant.Nom)
+                @Html.DisplayFor(m => m.Composant.Nom)
             </div>
         </div>
 
