--- a/STM.GDA.Web/Views/Composant/_Liste.cshtml
+++ b/STM.GDA.Web/Views/Composant/_Liste.cshtml
@@ -5,7 +5,7 @@
 {
 <div class="divComposant @(composant.DernierComposantAffiche ? "dernier-element" : "")" onclick="window.location.href = '@Url.Action("Details", "Composant", new { id =  @Html.ValueFor(x => composant.Id) })'">
     <div class="col-sm-10 bold padding-top">
-        @Html.DisplayFor(x => composant.AbreviationNom)
+        @Html.DisplayFor(x => composant.DisplayString)
     </div>
 
     <div class="col-sm-2 italic right-align padding-top version">
