--- a/STM.GDA.Web/Views/Deploiement/Creer.cshtml
+++ b/STM.GDA.Web/Views/Deploiement/Creer.cshtml
@@ -1,4 +1,6 @@
-﻿@section Styles {
+﻿@using STM.GDA.Web.Models
+
+@section Styles {
     <link href="@Url.Content("~/Content/ComposantCreer.css")" rel="stylesheet" type="text/css" />
 }
 @section Scripts {
@@ -9,25 +11,45 @@
 <div class="container">
     @Html.ActionLink("Retour à la liste", "Index")
     <form id="formCreation">
-        <div class="col-md-5">
+        <div class="col-md-6">
+
             <h3>Création</h3>
-            <div class="value row">
-                <div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
-                    @Html.DisplayNameFor(m => m.Composant.Nom)
-                </div>
-                <div class="col-xs-12 col-sm-9 col-md-8">
-                    @Html.EditorFor(m => m.Composant.Nom, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(m => m.Composant.Nom, "", new { @class = "text-danger" })
-                </div>
-            </div>
 
             <div class="value row">
                 <div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
                     @Html.DisplayNameFor(m => m.DateDeploiement)
                 </div>
                 <div class="col-xs-12 col-sm-9 col-md-8">
-                    @Html.EditorFor(m => m.DateDeploiement, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(m => m.DateDeploiement, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        <div class='input-group date'>
+                            @Html.EditorFor(m => m.DateDeploiement, new { htmlAttributes = new { @class = "form-control" } })
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar"></span>
+                            </span>
+                        </div>
+                        @Html.ValidationMessageFor(m => m.DateDeploiement, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+
+            <div class="value row">
+                <div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
+                    @Html.DisplayNameFor(m => m.Composant.Nom)
+                </div>
+                <div class="col-xs-12 col-sm-9 col-md-8">
+                    @Html.DropDownListFor(
+                             m => m.Composant,
+                             (IEnumerable<SelectListItem>)ViewBag.Composants,
+                             new { @id = "composants", style = "width: 100%;" })
+                </div>
+            </div>
+
+            <div class="value row">
+                <div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
+                    @Html.DisplayNameFor(m => m.Environnement)
+                </div>
+                <div class="col-xs-12 col-sm-9 col-md-8">
+                    @Html.DropDownListFor(m => m.Environnement.Id, (IEnumerable<SelectListItem>)ViewBag.ListeEnvrionnements, new { @class = "form-control" })
                 </div>
             </div>
 
@@ -36,7 +58,7 @@
                     @Html.DisplayNameFor(m => m.PremierDeploiement)
                 </div>
                 <div class="col-xs-12 col-sm-9 col-md-8">
-                    @Html.EditorFor(m => m.PremierDeploiement, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(m => m.PremierDeploiement)
                 </div>
             </div>
 
@@ -84,22 +106,18 @@
                     @Html.EditorFor(m => m.Details, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
+        </div>
 
-            <div class="value row">
-                <div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
-                    @Html.DisplayNameFor(m => m.Environnement)
-                </div>
-                <div class="col-xs-12 col-sm-9 col-md-8">
-                    @Html.DropDownListFor(m => m.Environnement.Id, (IEnumerable<SelectListItem>)ViewBag.ListeEnvrionnements, new { @class = "form-control" })
-                </div>
-            </div>
+        <div class="col-md-6">
+
+            <h3>Déploiements nécéssaires</h3>
 
             <div class="value row">
                 <div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
                     @Html.DisplayNameFor(m => m.Web)
                 </div>
                 <div class="col-xs-12 col-sm-9 col-md-8">
-                    @Html.EditorFor(m => m.Web, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(m => m.Web)
                 </div>
             </div>
 
@@ -108,7 +126,7 @@
                     @Html.DisplayNameFor(m => m.BD)
                 </div>
                 <div class="col-xs-12 col-sm-9 col-md-8">
-                    @Html.EditorFor(m => m.BD, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(m => m.BD)
                 </div>
             </div>
 
@@ -117,7 +135,7 @@
                     @Html.DisplayNameFor(m => m.Rapport)
                 </div>
                 <div class="col-xs-12 col-sm-9 col-md-8">
-                    @Html.EditorFor(m => m.Rapport, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(m => m.Rapport)
                 </div>
             </div>
 
@@ -126,7 +144,7 @@
                     @Html.DisplayNameFor(m => m.Interface)
                 </div>
                 <div class="col-xs-12 col-sm-9 col-md-8">
-                    @Html.EditorFor(m => m.Interface, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(m => m.Interface)
                 </div>
             </div>
 
@@ -135,22 +153,28 @@
                     @Html.DisplayNameFor(m => m.Job)
                 </div>
                 <div class="col-xs-12 col-sm-9 col-md-8">
-                    @Html.EditorFor(m => m.Job, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(m => m.Job)
                 </div>
             </div>
+        </div>
 
-            <div class="col-md-7 no-pad">
-                <div class="col-md-12 marging-top align-right">
-                    <button type="button" id="btnCreer" class="btn btn-primary">Créer</button>
-                    <button type="button" id="btnAnnuler" class="btn btn-warning">Annuler</button>
-                </div>
-            </div>
+        <div class="col-md-12 marging-top align-right">
+            <button type="button" id="btnCreer" class="btn btn-primary">Créer</button>
+            <button type="button" id="btnAnnuler" class="btn btn-warning">Annuler</button>
+        </div>
 
-</form>
+    </form>
 </div>
 
 <script>
-  
+
+    $(document).ready(function () {
+        $('.input-group.date').datetimepicker({
+            format: 'MM-DD-YYYY HH:mm'
+        }).data("DateTimePicker").date(moment());
+
+        $('#composants').selectize();
+    });
 
     $("#btnAnnuler").click(function () {
         window.location.href = '@Url.Action("Index", "Deploiement")';
