--- a/STM.GDA.Web/Views/Deploiement/Details.cshtml
+++ b/STM.GDA.Web/Views/Deploiement/Details.cshtml
@@ -64,10 +64,10 @@
 
         <div class="value row">
             <div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
-                @Html.DisplayNameFor(m => m.BranchTag)
+                @Html.DisplayNameFor(m => m.BrancheTag)
             </div>
             <div class="col-xs-12 col-sm-9 col-md-8">
-                @Html.DisplayFor(m => m.BranchTag)
+                @Html.DisplayFor(m => m.BrancheTag)
             </div>
         </div>
 
