--- a/STM.GDA.Web/Views/Deploiement/Creer.cshtml
+++ b/STM.GDA.Web/Views/Deploiement/Creer.cshtml
@@ -32,13 +32,13 @@
                 </div>
             </div>
 
-
             <div class="value row">
                 <div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
-                    @Html.DisplayNameFor(m => m.Composant.Nom)
+                    @Html.DisplayNameFor(m => m.Composant)
                 </div>
                 <div class="col-xs-12 col-sm-9 col-md-8">
-                    @Html.DropDownListFor(m => m.Composant.Id, (IEnumerable<SelectListItem>)ViewBag.ListeComposants, new { @class = "form-control" })
+                    @Html.DropDownListFor(m => m.Composant.Id, (IEnumerable<SelectListItem>)ViewBag.ListeComposants, new { style = "width: 100%;" })
+                    @Html.ValidationMessageFor(m => m.Composant.Id, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -53,7 +53,7 @@
 
             <div class="value row">
                 <div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
-                    @Html.DisplayNameFor(m => m.PremierDeploiement)
+                    @Html.LabelFor(m => m.PremierDeploiement)
                 </div>
                 <div class="col-xs-12 col-sm-9 col-md-8">
                     @Html.EditorFor(m => m.PremierDeploiement)
@@ -112,7 +112,7 @@
 
             <div class="value row">
                 <div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
-                    @Html.DisplayNameFor(m => m.Web)
+                    @Html.LabelFor(m => m.Web)
                 </div>
                 <div class="col-xs-12 col-sm-9 col-md-8">
                     @Html.EditorFor(m => m.Web)
@@ -121,7 +121,7 @@
              
             <div class="value row">
                 <div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
-                    @Html.DisplayNameFor(m => m.BD)
+                    @Html.LabelFor(m => m.BD)
                 </div>
                 <div class="col-xs-12 col-sm-9 col-md-8">
                     @Html.EditorFor(m => m.BD)
@@ -130,7 +130,7 @@
 
             <div class="value row">
                 <div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
-                    @Html.DisplayNameFor(m => m.Rapport)
+                    @Html.LabelFor(m => m.Rapport)
                 </div>
                 <div class="col-xs-12 col-sm-9 col-md-8">
                     @Html.EditorFor(m => m.Rapport)
@@ -139,7 +139,7 @@
 
             <div class="value row">
                 <div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
-                    @Html.DisplayNameFor(m => m.Interface)
+                    @Html.LabelFor(m => m.Interface)
                 </div>
                 <div class="col-xs-12 col-sm-9 col-md-8">
                     @Html.EditorFor(m => m.Interface)
@@ -148,7 +148,7 @@
 
             <div class="value row">
                 <div class="col-xs-12 col-sm-3 col-md-4 sm-right-align bold">
-                    @Html.DisplayNameFor(m => m.Job)
+                    @Html.LabelFor(m => m.Job)
                 </div>
                 <div class="col-xs-12 col-sm-9 col-md-8">
                     @Html.EditorFor(m => m.Job)
@@ -171,7 +171,10 @@
             format: 'MM-DD-YYYY HH:mm'
         }).data("DateTimePicker").date(moment());
 
-        $('#composants').selectize();
+        $('#Composant_Id').selectize({
+            placeholder: 'Sélectionnez le composant',
+            sortField: 'text'
+        });
     });
 
     $("#btnAnnuler").click(function () {
@@ -184,8 +187,8 @@
                 "@Url.Action("Creer", "Deploiement")",
                 {
                     deploiement: {
-                       Composant: { Id: $("#Composant_Id").val(), Nom: null },
-                       PremierDeploiement: $("#PremierDeploiement").is(':checked'),
+                        Composant: { Id: $("#Composant_Id").val(), Nom: null },
+                        PremierDeploiement: $("#PremierDeploiement").is(':checked'),
                         Date: $("#Date").val(),
                         BrancheTag: $("#BrancheTag").val(),
                         URLDestination: $("#UrlDestination").val(),
