--- a/STM.GDA.Web/Views/Deploiement/Creer.cshtml
+++ b/STM.GDA.Web/Views/Deploiement/Creer.cshtml
@@ -47,7 +47,7 @@
                     @Html.DisplayNameFor(m => m.Environnement)
                 </div>
                 <div class="col-xs-12 col-sm-9 col-md-8">
-                    @Html.DropDownListFor(m => m.Environnement.Id, (IEnumerable<SelectListItem>)ViewBag.ListeEnvrionnements, new { @class = "form-control" })
+                    @Html.DropDownListFor(m => m.Environnement.Id, (IEnumerable<SelectListItem>)ViewBag.ListeEnvironnements, new { @class = "form-control" })
                 </div>
             </div>
 
