La date enregistrée était toujours la date actuelle. Maintenant la date sélectionnée est correctement enregistrée.

--- a/STM.GDA.Web/Views/Deploiement/Creer.cshtml
+++ b/STM.GDA.Web/Views/Deploiement/Creer.cshtml
@@ -189,7 +189,7 @@
                     deploiement: {
                         Composant: { Id: $("#Composant_Id").val(), Nom: null },
                         PremierDeploiement: $("#PremierDeploiement").is(':checked'),
-                        Date: $("#Date").val(),
+                        DateDeploiement: $("#DateDeploiement").val(),
                         BrancheTag: $("#BrancheTag").val(),
                         URLDestination: $("#UrlDestination").val(),
                         PortailGroupe: $("#PortailGroupe").val(),
